Auth flow, Tests and github workflow
